--- a/api-site/public/css/style.css
+++ b/api-site/public/css/style.css
@@ -455,4 +455,70 @@ select {
 }
 #vida h2{
   color: #ffed03;
+  display: flex;
+  justify-content: center;
 }
+/* Estilo padrão do botão */
+.btn button {
+  background-color: #FFD700;
+  border: none;
+  color: #000;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
+}
+
+/* Estilo do botão quando o mouse estiver em cima */
+.btn button:hover {
+  background-color: #F0E68C;
+  color: #FFF;
+}
+
+/* Estilo do botão quando estiver ativo */
+.btn button:active {
+  background-color: #FFA500;
+  color: #FFF;
+}
+
+/* Estilo do botão quando estiver desativado */
+.btn button.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+/* Estilo dos botões específicos do Toy Story */
+#botao1 {
+  background-color: #FFD700;
+  border-color: #CD853F;
+}
+
+#botao1:hover {
+  background-color: #F0E68C;
+  border-color: #CD853F;
+}
+
+#botao1:active {
+  background-color: #FFA500;
+  border-color: #CD853F;
+}
+
+#botao2 {
+  background-color: #CD853F;
+  border-color: #FFD700;
+}
+
+#botao2:hover {
+  background-color: #DAA520;
+  border-color: #FFD700;
+}
+
+#botao2:active {
+  background-color: #FFA500;
+  border-color: #FFD700;
+}
+
